src/style.css
html {
  font-size: 14px;
  box-sizing: border-box;
}

body {
  text-align: left;
  margin: 200px;
  font-size: 2rem;
}

form {
  display: flex;
  flex-direction: column;
  align-content: space-around;
  height: auto;
  margin: 0 auto;
}

h1 {
  font-size: 5rem;
  padding: 2rem;
  text-align: left;
  width: 440px;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
}

h2 {
  font-size: 4rem;
}

.main-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  text-align: left;
  height: auto;
  margin: 0 auto;
}

.title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  text-align: left;
  height: auto;
  margin: 0 auto;
}

ul {
  list-style: none;
  padding-left: 0;
  width: auto;
  align-self: flex-start;
}

li {
  padding: 0.2rem;
  border-radius: 5px;
  padding-left: 1rem;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
}

li:nth-child(odd) {
  background: #d9d9d9;
  border: solid 1px #609beb;
}

li:nth-child(even) {
  background: #609beb;
  border: solid 1px #d9d9d9;
}

.recent-scores,
.add-your-score {
  border: solid 1px #d9d9d9;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
  border-radius: 10px;
  padding: 1rem;
}

.add-your-score {
  width: 400px;
  height: 300px;
}

.recent-scores {
  width: 700px;
}

.recent {
  padding-left: 0.5rem;
}

.refresh-btn {
  font-size: 2rem;
  justify-self: center;
  font-weight: bold;
  padding: 0.5rem;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
}

.btn {
  font-size: 2rem;
  align-self: flex-end;
  font-weight: bold;
  padding: 0.5rem;
  margin: 17px;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
}

input {
  font-size: 2rem;
  padding: 0.5rem;
  border: solid 0.3px #d9d9d9;
  border-radius: 5px;
  margin: 1rem;
}

#playerName {
  margin-top: 45px;
}

